# SDL-JUMP-GAME

./: .gitignore  CMakeLists.txt
lib/: CMakeLists.txt
src/: Game.cpp  Game.h  main.cpp
src/entity/: Entity.cpp  Entity.h  EntityState.h  Player.cpp  Player.h
src/misc/: FileParser.cpp  FileParser.h  InputManager.cpp  InputManager.h  ScoreManager.cpp  ScoreManager.h  SettingsManager.cpp  SettingsManager.h  Vector2.cpp  Vector2.h
src/visual/: Renderer.cpp  Renderer.h  TextureWrapper.cpp  TextureWrapper.h
src/world/: CollisionSystem.cpp  CollisionSystem.h  Tile.h  World.cpp  World.h
